Fixed scrolling issues with PDF on mobile.

--- a/src/style/pdf-viewer.scss
+++ b/src/style/pdf-viewer.scss
@@ -10,6 +10,6 @@ iframe {
   justify-content: center;
   align-items: center;
   background-color: #55555a;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
